<resources>
    <string name="app_name">GetTogether</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="get_together">Get Together</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="tagged">Tagged</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple_id">Sign in with Apple ID</string>
</resources>