<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/feedButton"
        android:title="@string/feed"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="1">
    </item>
    <item android:id="@+id/mapButton"
        android:title="@string/map"
        android:icon="@drawable/ic_baseline_map_24"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/notificationsButton"
        android:icon="@drawable/bell_icon"
        android:orderInCategory="3"
        android:title="@string/notifications" />
    <item android:id="@+id/profileButton"
        android:title="@string/Profile"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="4">
    </item>

</menu>